WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266545
[iOS] Overriding -[WKWebView textInputTraits] no longer works when async text input is enabled
https://bugs.webkit.org/show_bug.cgi?id=266545
Summary
[iOS] Overriding -[WKWebView textInputTraits] no longer works when async text...
Wenson Hsieh
Reported
2023-12-16 16:39:21 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-16 16:39:49 PST
<
rdar://problem/119768117
>
Wenson Hsieh
Comment 2
2023-12-16 17:11:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21931
EWS
Comment 3
2023-12-16 20:35:27 PST
Committed
272187@main
(6a0bff521d3a): <
https://commits.webkit.org/272187@main
> Reviewed commits have been landed. Closing PR #21931 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug