[iOS] Overriding -[WKWebView textInputTraits] no longer works when async text input is enabled https://bugs.webkit.org/show_bug.cgi?id=266545 rdar://119768117

Reviewed by Megan Gardner.

Ensure binary compatibility with internal clients (e.g. Mail, News) that override the SPI method
`-[WKWebView _textInputTraits]`, to override or customize the private text input traits object. To
do this, we detect whether or not the embedding client overrides `-_textInputTraits`, and fall back
to returning private text input traits (`UITextInputTraits`) in `-extendedTraitsDelegate`, which
consults the embedding client in the process.

We also suppress the async text input assertion in this case. Covered by running the API test
`KeyboardInputTests.OverrideTextInputTraits` when `UIKit/async_text_input` is enabled.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView insertionPointColor]):
(-[WKContentView selectionBarColor]):
(-[WKContentView selectionHighlightColor]):
(-[WKContentView _requiresLegacyTextInputTraits]):
(-[WKContentView textInputTraits]):
(-[WKContentView extendedTraitsDelegate]):
(-[WKContentView textContentTypeForTesting]):

Canonical link: https://commits.webkit.org/272187@main